# ota_server

./: .gitignore  Cargo.toml  README.md
.opencode/state/: codegraph-session-runtime.json
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/pages/: OtaConfig.jsx  OtaDownload.jsx  OtaManifest.jsx  OtaNotify.jsx  OtaPublish.jsx  VideoList.jsx  VideoUpload.jsx
src/: main.rs  service.rs
src/hardware/: http.rs  mqtt.rs
src/service/: ota.rs  util.rs  video.rs
