[package]
name = "ota_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = { version = "0.8.9", features = ["multipart"] }
chrono = "0.4.45"
futures-util = "0.3.31"
md-5 = "0.10.6"
mqtt5 = "0.35.1"
postcard = "1.1.3"

serde = "1.0.228"
serde_json = "1.0.150"
thiserror = "2.0.18"
toasty = { version = "0.5.0", features = ["sqlite"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
version-compare = "0.2.1"
tower-http = { version = "0.7.0", features = ["cors"] }
